// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ListView with children 1`] = `
<List
  data-terra-clinical-item-collection-table-view={true}
  isDivided={false}
>
  <Item
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    hasEndAccessory={true}
    hasStartAccessory={true}
    isSelectable={false}
    isSelected={false}
    itemKey={null}
    listItemStyles={Object {}}
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      isTruncated={false}
      text="Display 1"
    />
  </Item>
</List>
`;

exports[`should render a ListView with list styles 1`] = `
<List
  data-terra-clinical-item-collection-table-view={true}
  isDivided={true}
>
  <Item
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    hasEndAccessory={true}
    hasStartAccessory={true}
    isSelectable={false}
    isSelected={false}
    itemKey="1"
    listItemStyles={Object {}}
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      isTruncated={false}
      text="Display 1"
    />
  </Item>
</List>
`;

exports[`should render a default ListView 1`] = `
<List
  data-terra-clinical-item-collection-table-view={true}
  isDivided={false}
/>
`;
